# RISCV-Simulator

./: CMakeLists.txt  code
lib/: CircularQueue.h
src/: ALU.cpp  ALU.h  Bus.cpp  Bus.h  InstructionUnit.cpp  InstructionUnit.h  LoadStoreBuffer.cpp  LoadStoreBuffer.h  Memory.cpp  Parser.cpp  Predictor.cpp  Predictor.h  RISCV_Simulator.cpp  RISCV_Simulator.h  ReorderBuffer.cpp  ReorderBuffer.h  ReservationStation.cpp  ReservationStation.h  Utils.h  main.cpp  memory.h  parser.h  register.cpp  register.h
